# survey-data-system

./: .coverage  .env.example  .gitignore  .replit  AI_DATABASE_OPTIMIZATION_GUIDE.md  AI_IMPLEMENTATION_GAME_PLAN.md  AI_QUERY_PATTERNS_AND_EXAMPLES.md  API_ENDPOINTS_TO_ADD.py  ARCHITECTURE_AUDIT_FINDINGS.md  ARCHITECTURE_AUDIT_REPORT.md  ATTRIBUTE_SYSTEM_GUIDE.md  AUDIT_EXECUTIVE_SUMMARY.txt  AUDIT_FIX_CHECKLIST.md  AUTH_IMPLEMENTATION_GUIDE.md  AUTH_SETUP_GUIDE.md  AUTO_POPULATE_PROJECT_CODE_TEST.md  CAD_STANDARDS_GUIDE.md  CAD_STANDARDS_REDESIGN_PLAN.md  CELERY_DXF_REFACTORING_ANALYSIS.md  CIVIL_ENGINEERING_DOMAIN_MODEL.md  CLAUDE.md  CODE_REVIEW_QUICK_FIXES.md  CODE_REVIEW_SUMMARY.txt  COORDINATE_VALIDATION_COMPLETE.md  DATABASE_ARCHITECTURE_GUIDE.md  DATA_FLOW_AND_LIFECYCLE.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_INDEX.md  DRAWING_PAPERSPACE_CLEANUP_STATUS.md  ENTITY_RELATIONSHIP_MODEL.md  FINAL_IMPROVEMENTS_SUMMARY.md  FIX_PROJECT_CREATION_INSTRUCTIONS.md  HANDOFF_INSTRUCTIONS.md  IMPLEMENTATION_LOG.md  IMPLEMENTATION_STATUS.md  INTELLIGENT_DXF_SUMMARY.md  INTELLIGENT_DXF_WORKFLOW.md  MIGRATION_DRAWINGS_MANAGER.md  MIGRATION_DXF_TOOLS.md  MIGRATION_GUIDE_PHASE15.md  (+115 more)
api/: ai_search_routes.py  graphrag_routes.py  quality_routes.py  relationship_routes.py
app/: __init__.py  celery_config.py  config.py  data_models.py  db_session.py  extensions.py  tasks.py
attached_assets/: 250729-TOPO_1762984517113.txt  5131-BDY_1762398143997.dxf  5131-DESIGN-PL AT ELEVATION_1762962349985.dxf  5131-EG SURFACE-CIVIL 3D-export-small test area_1762956821562.dxf  AI_for_Civil_Engineering_Presentation_Summary_1761887989725.md  API_1760978486192.md  ARCHITECTURE_1760978486192.md  BEGINNERS_GUIDE_1760978451034.md  COS Standards - Abbreviations - CivilOS Standards - Abbreviations_1761306365796.csv  COS Standards - Blocks - Sheet1_1761306365797.csv  COS Standards - Details - Sheet1_1761306365795.csv  COS Standards - LAYER-TO-DETAIL LIBRARY CROSS-REFERENCE - CivilOS Standards - Layer cross Reference Phase 1_1761306365794.csv  COS Standards - Layers - CivilOS Standards - Layers_1761306365796.csv  GIS_registry - EXTENDED WITH SOCO LINKS_1762349241851.csv  GIS_registry_-_EXTENDED_WITH_SOCO_LINKS_1762800979308.csv  GIS_registry_1762319559976.csv  Pasted--ACAD-GIS-Survey-Point-Code-System-Implementation-Specification-Project-Context-I-have-a-1762990377229_1762990377230.txt  Pasted--CAD-Standards-Rebuild-Explained-Simply-The-Problem-Imagine-you-re-building-houses-and-e-1762640476941_1762640476941.txt  Pasted--Comprehensive-Technical-Specification-Open-Source-GIS-Web-Mapping-Export-Tool-Project-Ove-1762309109015_1762309109016.txt  Pasted--Comprehensive-Technical-Specification-Open-Source-GIS-Web-Mapping-Export-Tool-Project-Overv-1762366729077_1762366729079.txt  (+45 more)
auth/: decorators.py  routes.py
(+455 files in other folders)
