[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-caching>=2.3.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
    "openai>=2.6.1",
    "ezdxf>=1.4.3",
    "werkzeug>=3.1.3",
]
