[project]
name = "acad-gis"
version = "0.1.0"
description = "AI-First CAD/GIS System - Database-centric platform for civil engineering and surveying with intelligent DXF import/export, semantic layer naming, and GraphRAG knowledge graphs"
requires-python = ">=3.11"
dependencies = [
    "flask-caching>=2.3.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
    "openai>=2.6.1",
    "ezdxf>=1.4.3",
    "werkzeug>=3.1.3",
    "pillow>=12.0.0",
    "rasterio>=1.4.3",
    "pyproj>=3.7.2",
    "shapely>=2.1.2",
    "fiona>=1.10.1",
    "owslib>=0.35.0",
    "arcgis2geojson>=3.1.1",
    "weasyprint>=66.0",
    "openpyxl>=3.1.5",
    "matplotlib>=3.10.7",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "responses>=0.24.0",
    "faker>=22.0.0",
    "freezegun>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=.",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "db: Tests requiring database",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/.venv/*",
    "*/venv/*",
    "*/archive/*",
    "*/examples/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
